# forge-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: agent-runtime.md  architecture.md  day02-rag-retrieval-assessment.md  day6-demo-scope.md  evaluation.md  final-report.md  rag.md  security.md
examples/evals/: agent_platform.jsonl
examples/knowledge_base/: agent-runtime.md  evaluation.md  rag.md  security.md
src/forge_agent/: __init__.py
src/forge_agent/cli/: app.py
src/forge_agent/evals/: __init__.py  dataset.py  metrics.py  report.py  runner.py  runtime_executor.py
src/forge_agent/observability/: __init__.py  events.py  exporter.py  trace.py
src/forge_agent/providers/: base.py  fake.py
src/forge_agent/rag/: __init__.py  chunker.py  citation.py  context_builder.py  document.py  knowledge_base.py  loader.py  retriever.py
src/forge_agent/runtime/: __init__.py  base.py  events.py  native_runtime.py  state.py
src/forge_agent/security/: __init__.py  errors.py  (+2 more)
tests/: test_cli_eval.py  test_cli_rag.py  test_cli_run.py  test_demo_commands.py  test_echo_tool.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_runner.py  test_file_tools_permission.py  test_langgraph_trace.py  test_permission_policy.py  test_permission_trace.py  test_provider_fake.py  test_rag_chunker.py  test_rag_context_builder.py  test_rag_knowledge_base.py  test_rag_loader.py  test_rag_retriever.py  test_rag_tool.py  test_runtime_langgraph.py  test_runtime_native.py  test_runtime_selection.py  test_tool_registry.py  test_trace_exporter.py  test_workspace_guard.py
(+12 files in other folders)
