[project]
name = "forge-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dreamer-Sea", email = "dreamersea183@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "typer>=0.26.7",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
forge = "forge_agent.cli.app:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"